2010-03-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move "// is /" check to configure.in.

	* configure.in: Add check for "// is /".
	(SLASHSLASH_IS_SLASH): New AC_DEFINE_UNQUOTED.

2010-03-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move "bad wait if SIGCHLD ignored" check to configure.in.

	* configure.in: Add check for `wait' that handles ignored SIGCHLD.
	(BAD_WAIT_IF_SIGCHLD_IGNORED): New AC_DEFINE_UNQUOTED.

2010-03-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move mmap-related checks to configure.in.

	* configure.in: Add checks for mmap-related quirks.
	(madvise, mmap): Add to `AC_CHECK_FUNCS_ONCE'.
	(SIMPLE_MMAP_PROGRAM): New AC_DEFUN.

2010-03-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move "bad rename" checks to configure.in.

	* configure.in: Add checks for "bad rename".
	(BAD_A_RENAME): New AC_DEFINE_UNQUOTED.
	(BAD_B_RENAME): Likewise.

2010-03-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `sys_siglist' check to configure.in.

	* configure.in (sys_siglist): Add to `AC_CHECK_FUNCS_ONCE'.

2010-03-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move "siginfo_t .si_errno" check to configure.in.

	* configure.in: Add check for "siginfo_t .si_errno".
	(HAVE_SI_ERRNO): New AC_DEFINE.

2010-03-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move "unlink on unwritable files" check to configure.in.

	* configure.in: Add check for "unlink on unwritable files".
	(BAD_UNLINK): New AC_DEFINE_UNQUOTED.

2010-03-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move "fopen w+ truncates" check to configure.in.

	* configure.in: Add check for "fopen w+ truncates".
	(BAD_FOPEN_WPLUS): New AC_DEFINE_UNQUOTED.

2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move "signal zaps handler" check to configure.in.

	* configure.in: Add check for signal zapping handlers,
	but only do this if we have <signal.h> and not `sigaction'.
	(SIG_ZAPS_HANDLER): New AC_DEFINE_UNQUOTED.

2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>
